components/apicurio-registry/envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: apicurio-envoy-config
  namespace: kafka
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: main
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8443
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: registry
                    codec_type: AUTO
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: registry
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/apis/"
                              route:
                                cluster: registry-backend
                            - match:
                                prefix: "/ui/"
                              route:
                                cluster: registry-ui
                              typed_per_filter_config:
                                envoy.filters.http.ext_authz:
                                  "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                                  disabled: true
                            - match:
                                prefix: "/"
                              route:
                                cluster: registry-ui
                              typed_per_filter_config:
                                envoy.filters.http.ext_authz:
                                  "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                                  disabled: true
                    http_filters:
                      - name: envoy.filters.http.ext_authz
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                          grpc_service:
                            envoy_grpc:
                              cluster_name: authorino
                            timeout: 5s
                          transport_api_version: V3
                          failure_mode_allow: false
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
        - name: registry-backend
          type: STATIC
          connect_timeout: 1s
          load_assignment:
            cluster_name: registry-backend
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: 127.0.0.1
                          port_value: 8080

        - name: registry-ui
          type: STATIC
          connect_timeout: 1s
          load_assignment:
            cluster_name: registry-ui
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: 127.0.0.1
                          port_value: 8888

        - name: authorino
          type: STRICT_DNS
          connect_timeout: 1s
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
          load_assignment:
            cluster_name: authorino
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: authorino-authorino-authorization.kafka.svc.cluster.local
                          port_value: 50051
