components/apicurio-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apicurio-registry
  namespace: kafka
spec:
  ingressClassName: nginx
  rules:
    - host: apicurio-registry.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apicurio-registry
                port:
                  number: 8443
